--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cipherschools-mern",
+  "homepage": "https://Peeyush-04.github.io/weather-app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
